[package]
name = "libretrans"
version = "0.1.3"
authors = ["DefunctLizard <grantshandy@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Open Source Machine Translation CLI"
repository = "https://github.com/DefunctLizard/libretrans/"
documentation = "https://docs.rs/libretrans"
keywords = ["translate", "language", "libretranslate", "translation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
libretranslate = "0.1.8"
colored = "2.0.0"
